public/stylesheets/style.css
/* overarching styles */
* {
  box-sizing: border-box;
}
*:focus {
  outline: none;
}

/* mobular classes */
.full-height {
  height: 100%;
}
.full-width {
  width: 100%;
}
.shadow {
  box-shadow: 0 0 5px #888;
}
.flex-box {
  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display: -ms-flexbox;      /* TWEENER - IE 10 */
  display: -webkit-flex;     /* NEW - Chrome */
  display: flex;
}


body {
  overflow: hidden;
  margin: 0;
  font-family: 'Roboto', sans-serif;
}
h2 {
  margin: 0;
  padding: 5px;
}
.facebook {
  background: rgba(255, 255, 255, .2);
  color: #fff;
  border-radius: 5px;
  text-decoration: none;
  border: 2px solid #fff;
  padding: 10px 15px;
  margin-top: 20px;
}
.facebook:hover {
  background: rgba(255, 255, 255, .6);
}
.render {
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
}
.authRender {
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
}
.hide-profile {
  background: rgba(150, 150, 150, .6);
  border: none;
  color: #333;
  -webkit-box-flex: 0 0 60px;
  -moz-box-flex: 0 0 60px;
  -webkit-flex: 0 0 60px;
  -ms-flex: 0 0 60px;
  flex: 0 0 60px;
}
.hide-profile i {
  transition: .5s;
}
.flipped {
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -o-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  transition: .5s;
}
.view-select h2 {
  font-weight: 100;
}
.view-select {
  width: 17%;
  border: none;
  background: rgba(150, 150, 150, .6);
  color: #333;
  padding: 14px 10px;
}
.view-select:hover {
  background: rgba(10,10,10,.8);
  color: #fff;
}
.content {
  position: absolute;
  left: 20%;
  height: 100%;
  overflow-y: auto;
  z-index: -2;
}
.side {
  flex-direction: column;
  z-index: 1;
  position: fixed;
  top: 0;
  left: 0;
  text-align: center;
  height: 100%;
  width: 20%;
  float: left;
  font-size: 1em;
  box-shadow: 0 0 5px;
  transition: .5s;
  background: #fff;
}
.profile-pic {
  -webkit-box-flex: 0 0 auto;
  -moz-box-flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}
.name {
  -webkit-box-flex: 0 0 auto;
  -moz-box-flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}
.logo {
  -webkit-box-flex: 0 0 60px;
  -moz-box-flex: 0 0 60px;
  -webkit-flex: 0 0 60px;
  -ms-flex: 0 0 60px;
  flex: 0 0 60px;
  background-color: #282878;
  font-family: 'Roboto Slab', sans-serif;
  font-weight: 300;
  font-size: 1.5em;
  color: #fff;
  cursor: pointer;
  cursor: hand;
}
.full-screen {
  position: fixed;
  bottom: 0;
  top: 0;
  left: 0;
  right: 0;
}
.center {
  align-items: center;
  justify-content: center;
  background: rgba(100, 100, 100, .8);
  position: absolute;
  text-align: center;
}
.center img {
  width: 50%;
  font-size: 8em;
  font-family: 'Roboto Slab', sans-serif;
}
.element {
  box-sizing: content-box;
  width: 120px;
  overflow: hidden;
  height: 160px;
  border-radius: 4px;
  text-align: center;
  cursor: default;
  box-shadow: 0 0 25px #888;
}
.element:hover {
  border: solid #515151 4px;
}
.element img {
  min-height: 160px;
  min-width: 120px;
  height: 100%;
}
.search {
  margin-top: 100px;
  width: 350px;
  height: 50px;
  font-size: 12px;
}
.snip {
  border: none;
  padding: 10px;
}
.hover:hover {
  background: #e6e6e6;
}
.list-view {
  overflow: auto;
}
.add {
  float: right;
  -webkit-box-flex: 0 0 auto;
  -moz-box-flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  border: none;
  color: #e6e6e6;
  background: #fff;
}
.save {
  border-radius: 4px;
  border: none;
  background: #e6e6e6;
  text-align: center;
}
.add:hover {
  color: #ccc;
}
.grid {
  -webkit-column-count: 4;
  -webkit-column-gap: 0px;
  -moz-column-count: 4;
  -moz-column-gap: 0px;
  column-count: 4;
  column-gap: 0px;
}
.picture {
  float: left;
}
.snip-picture {
  padding: 0px 5px 1px 5px;
}
.tab-views {
  -webkit-box-flex: 1 10 auto;
  -moz-box-flex: 1 10 auto;
  -webkit-flex: 1 10 auto;
  -ms-flex: 1 10 auto;
  flex: 1 10 auto;
  overflow-y: auto;
}
.tab-view {
  float: left;
  clear: both;
  text-align: left;
}
.tab-view a {
  text-decoration: none;
  color: black;
  cursor: pointer;
}
.right {
  float: right;
}
.right button {
  border: none;
  background: transparent;
  padding: 0;
}
.right i {
  background: transparent;
  color: #e6e6e6;
}
.right i:hover {
  color: #ccc;
}
.tabs {
  background: #29438F;
  color: #fff;
  font-weight: 100;
}
.tabs div {
  width: 33.33%;
  float: right;
  cursor: pointer;
  padding: .5em;
}
.tabs div:hover {
  background-color: #282878;
}
.snip-name {
  padding: 10px;
  margin: 0;
  width: 100%;
  -webkit-box-flex: 10 10 auto;
  -moz-box-flex: 10 10 auto;
  -webkit-flex: 10 10 auto;
  -ms-flex: 10 10 auto;
  flex: 10 10 auto;
  border: none;
}
.snip-name {
  font-family: 'Roboto', sans-serif;
}
#snip-view {
  width: 100%;
  float: right;
  padding: 5px;
}
.flex-col {
  flex-direction: column;
}
.snips {
  flex-direction: column;
  position: absolute;
  height: 100%;
  width: 20%;
  background-color: #ccc;
  box-shadow: 0 0 5px;
}
.snip-scroll {
  overflow-y: auto;
  -webkit-box-flex: 10 10 auto;
  -moz-box-flex: 10 10 auto;
  -webkit-flex: 10 10 auto;
  -ms-flex: 10 10 auto;
  flex: 10 10 auto;
}
.scroll-photo {
  height: 100%;
}
.loading {
  width: 20%;
  margin: 10% 40%;
  box-sizing: content-box;
}
.flex-name {
  -webkit-box-flex: 10 10;
  -moz-box-flex: 10 10;
  -webkit-flex: 10 10;
  -webkit-flex: 10 10;
  -ms-flex: 10 10;
  flex: 10 10;
}
.thin {
  width: 60%;
  transition: .5s;
}
.fat {
  width: 80%;
  transition: .5s;
}
.full {
  width: 100%;
  left: 0;
  transition: .5s;
}
.hiddenprofile {
  left: -20% !important;
  transition: .5s;
}
#menu {
  height: 60px;
  display: flex;
}
button.settings {
  width: 100%;
}
.hidden {
  right: -20%;
  transition: .5s;
}
.shown {
  right: 0;
  transition: .5s;
}

#views {
  width: 100%;
  background: #282878;
}
#views button {
  width: 16.3%;
  text-align: center;
  background: transparent;
  color: white;
  border: none;
}
.mobile-hide {
  transition: 1s;
  position: absolute;
  top: 0;
  right: 0;
  background: transparent;
  border: none;
}
.mobile-hide i {
  color: #282878;
}
.mobileMenu {
  position: absolute;
  height: 100%;
  top: 0;
  left: 0;
  transition: 1s;
  width: 95%;
  background: #fff;
  box-shadow: 0 0 5px;
}
.mobilehideopen {
  transition: 1s;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -o-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}
.hiddenMenu {
  transition: 1s;
  left: -100%;
}
.snip-bar {
  background: #fff;
  box-shadow: 0 0 5px #888;
  z-index: 5;
}
.snip-bar h3 {
  margin: 10px;
  flex: 10;
}
.info {
  transition: .5s;
  top: -40px;
  position: absolute;
  width: 100%;
  background: white;
  box-shadow: 0 0 5px #888;
  padding: 10px;
}
.infodropped {
  transition: .5s;
  top: 40px;
}
.url {
  font-size: 7pt;
}

